fix nav bar blur and text behind nav but need to do link match nav

--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,54 @@
     font-family: "Inter", sans-serif;
     background-color:#F1F0EE;
   }
-  
+ 
+  #welcome-section{
+    padding-bottom: 10px;
+  }
   #welcome-section h1{
  
   font-size: 5.3rem;
   letter-spacing: 1rem;
   text-align:center;
-  padding-bottom: 140px;
+  padding-bottom: 180px;
   padding-top: 300px;
   margin-top:0px;
 
   }
+.navbar {
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    background-color: transparent;
+    
+  
+  }
+
   .nav-list {
     display: flex;
     list-style: none;
     flex-direction: row;
     justify-content: flex-end;
-    gap:20px;
+    gap:25px;
     padding-right:15px;
-    padding-top: 10px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    position: fixed;
+    top: 0px;
+    padding-left: 820px;
+    letter-spacing: .2rem;
+    margin:0;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    
+    
+}
+.nav-list li a {
+ 
+    background: transparent;
+  backdrop-filter: blur(10px);
+  
+
     
 }
 
@@ -31,6 +60,7 @@
   display:flex;
   letter-spacing: .2rem;
   padding-left:100px;
+
   }
   #welcome-section a{
     text-decoration:none;
@@ -46,6 +76,7 @@
   
   #about-me{
     padding-bottom: 60px;
+    padding-top: 90px;
   }
   #about-me h3{
     font-size:3rem;
@@ -73,21 +104,22 @@
     margin:20px;
 }
   #about-me p{
-    
-  letter-spacing: .2rem;
+  letter-spacing: .12rem;
    text-align: justify;
-  line-height: 1.5;
+  line-height: 1.7;
   margin-left:50px;
   margin-right:50px;
+  
   }
   
   #about-me p#resume {
-      letter-spacing: .2rem;
+      letter-spacing: .15rem;
       text-align: center;
-      line-height: 1.5;
+      line-height: 1.2;
       margin-left: auto;
       margin-right: auto;
      cursor: pointer;
+     color:black;
    
   }
 
@@ -109,6 +141,12 @@
   margin-right:50px;
   }
   
+.dates-and-roles-div{
+    display: flex;
+    text-align: center;
+    justify-content:center;
+    gap:30px;
+}
   
   
   
@@ -132,3 +170,19 @@
   letter-spacing: .2rem;
   text-align:center;
   }
+
+  #contact h4{
+font-size:2rem;
+  letter-spacing: .2rem;
+  text-align:center;
+  font-weight: 450;
+  }
+
+  #contact h4:hover{
+    
+      text-decoration:none;
+      color:#F1F0EE;
+      background-color:black;
+   
+     
+      }
